# libwinevbs

./: .gitignore  CMakeLists.txt  README.md  winevbs64.def
.github/workflows/: libwinevbs.yml
include/: libwinevbs.h  libwinevbs_log.h
scripts/: genproxy.sh  genvbserrors.sh  winediff.sh
src/: libwinevbs.c  wine.c  winevbs_test.c
tools/idl-parser/: build.gradle  settings.gradle
tools/idl-parser/src/main/java/org/vpinball/: IDLInterface.java  IDLParserToC.java  Method.java
wine/: wine-0c0d26432084c18213d5c4b343f10939d25eee2c.patch  wine-2cac6ccf33c0807f374dc96f5a20e35a2da86157.patch  wine-6e073d28dee3af7f4c965daec94644e0f9f92727.patch  wine-996020f410e7a1aa2dd6b44cf740854ea524d31a.patch  wine-f051a28829e589b5cf025c574cb16fcf7aeb345a.patch  wine-f6c044e1890e84a4aa5e77e76ba7276a615630e1.patch
wine/dlls/kernelbase/: locale.c
wine/dlls/oleaut32/: oleaut32_oaidl.h  varformat.c
wine/dlls/scrrun/: dictionary.c  dictionary_proxy.c  filesystem.c  filesystem_proxy.c  scrrun.h
wine/dlls/vbscript/: compile.c  global.c  interp.c  lex.c  parse.h  parser.y  regexp_proxy.c  vbdisp.c  vbregexp.c  vbscript.c  vbscript.h  vbscript_classes.h  vbscript_main.c  vbsglobal.h  vbsregexp55.h
wine/dlls/wshom.ocx/: network.c  shell.c  shell_proxy.c  wshom.h  wshom_main.c  wshom_private.h
wine/include/: activdbg.h  activscp.h  atliface.h  comcat.h  dispex.h  docobj.h  exdisp.h  mshtmhst.h  msxml.h  oaidl.h  objectarray.h  objidl.h  objidlbase.h  objsafe.h  ocidl.h  oleidl.h  propidl.h  propsys.h  servprov.h  shdeprecated.h  shldisp.h  shobjidl.h  shobjidl_core.h  shtypes.h  structuredquerycondition.h  unknwn.h  urlmon.h  wia_lh.h  wia_xp.h  winbase.h  windef.h  winnt.h  winternl.h  wtypes.h  wtypesbase.h
